# voice-to-text

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  fly.toml  requirements.txt  summary_service.py  transcript_response.py  whisper_transcribe_audio.py  yt_download.py
api/: upload.py
templates/: index.html
transcription_app/: .dockerignore  CONTRIBUTING.md  Dockerfile  app.py  diarization_service.py  process_audio.py  pyproject.toml  requirements.txt  summary_agent.py  summary_service.py  transcribe_audio.py  transcript_response.py  whisper_transcribe_audio.py
transcription_app/api/: upload.py
transcription_app/config/: settings.py
transcription_app/models/: models.py
transcription_app/templates/: index.html
transcription_app/util/: format_audio.py
